Possible fix for missalignment of pictures.

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -47,11 +47,6 @@ body{
   min-height: 93vh;
 }
 
-.md-card-media img{
-  height: 200px;
-  width: 200px;
-}
-
 .md-card-media .md-icon{
   height: 300px;
   width: 300px;
